syntax = "proto3";
package pinger;

service Pinger {
  rpc Ping(PingRequest) returns (PingReply) {}
  rpc ServerStream(StreamRequest) returns (stream StreamReply) {}
  rpc ClientStream(stream StreamRequest) returns (StreamReply) {}
  rpc BidiStream(stream StreamRequest) returns (stream StreamReply) {}
}

message PingRequest {
  string message = 1;
}

message PingReply {
  string message = 1;
}

message StreamRequest {
  string message = 1;
}

message StreamReply {
  string message = 1;
}
